update user modules