@@ -4,6 +4,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.system.creditmanagementsystem.dto.UserDto;
 import org.system.creditmanagementsystem.entity.Role;
+import org.system.creditmanagementsystem.entity.User;
 import org.system.creditmanagementsystem.exception.AlreadyExistsException;
 import org.system.creditmanagementsystem.exception.NotFoundException;
 import org.system.creditmanagementsystem.mapper.UserMapper;
@@ -30,9 +31,15 @@ public class UserService {
         this.userMapper = userMapper;
     }
 
-    public List<UserDto> getAllUsers() {
-        return userRepository.findAll().stream().map(userMapper::toDto).collect(Collectors.toList()); // или просто toList()?
+    public List<UserDto> getAllUsersWithRoles() {
+        List<User> users = userRepository.findAll();
+        return users.stream().map(user -> {
+            UserDto userDto = userMapper.toDto(user);
+            userDto.setRoles(user.getRoles().stream().map(Role::getRoleName).collect(Collectors.toSet()));
+            return userDto;
+        }).toList();
     }
+
 
     public UserDto getUserById(UUID id) {
         var user = userRepository.findById(id).orElseThrow(() -> new NotFoundException(NOT_FOUND_MESSAGE));
